--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "music-sport-performance",
   "version": "0.1.0",
+  "proxy": "https://localhost:8080",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
